# mstats

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.qwen/: settings.json
specs/001-mostro-stats-cli/: data-model.md  research.md  spec.md  tasks.md
specs/001-mostro-stats-cli/contracts/: cli-contract.md
src/: aggregator.rs  cli.rs  config.rs  event_parser.rs  filters.rs  joiner.rs  main.rs  models.rs  output.rs  relay.rs
