[package]
name = "mstats"
version = "0.1.0"
edition = "2021"

[dependencies]
nostr-sdk = "=0.44.1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = []
integration-tests = []
